@@ -18,6 +18,20 @@
 		<template name="evt_entry_OnKeyDown">EVT_KEY_DOWN( #handler )</template>
 		<template name="evt_entry_OnKeyUp">EVT_KEY_UP( #handler )</template>
 		<template name="evt_entry_OnChar">EVT_CHAR( #handler )</template>
+                 <template name="evt_entry_OnLeftDown">EVT_LEFT_DOWN( #handler )</template>  
+                 <template name="evt_entry_OnLeftUp">EVT_LEFT_UP( #handler )</template> 
+                 <template name="evt_entry_OnLeftDClick">EVT_LEFT_DCLICK( #handler )</template> 
+                 <template name="evt_entry_OnMiddleDown">EVT_MIDDLE_DOWN( #handler )</template>  
+                 <template name="evt_entry_OnMiddleUp">EVT_MIDDLE_UP( #handler )</template> 
+                 <template name="evt_entry_OnMiddleDClick">EVT_MIDDLE_DCLICK( #handler )</template> 
+                 <template name="evt_entry_OnRightDown">EVT_RIGHT_DOWN( #handler )</template>  
+                 <template name="evt_entry_OnRightUp">EVT_RIGHT_UP( #handler )</template> 
+                 <template name="evt_entry_OnRightDClick">EVT_RIGHT_DCLICK( #handler )</template>
+                 <template name="evt_entry_OnMotion">EVT_MOTION( #handler )</template>
+                 <template name="evt_entry_OnEnterWindow">EVT_ENTER_WINDOW( #handler )</template>
+                 <template name="evt_entry_OnLeaveWindow">EVT_LEAVE_WINDOW( #handler )</template>
+                 <template name="evt_entry_OnMouseWheel">EVT_MOUSEWHEEL( #handler )</template>  
+                 <template name="evt_entry_OnMouseEvents">EVT_MOUSE_EVENTS( #handler )</template>   
 	</templates>
   
 	<templates class="Frame">
@@ -177,4 +191,3 @@
 	</templates>
 
 </codegen>
-
